# Triton-MLOps

./: README.md  pyproject.toml  setup.py
benchmarks/: bench_e2e_ttft.py  bench_prefix_prefill.py  bench_softmax.py  colab_plot.py
docs/: flaggems_contribution.md
tests/: conftest.py  test_merge_states.py  test_prefix_prefill.py  test_rmsnorm.py  test_softmax.py  test_swiglu.py
triton_ops/attention/: __init__.py  merge_states.py  prefix_prefill.py  vllm_compat.py
triton_ops/bonus/: __init__.py  rmsnorm.py  swiglu.py
triton_ops/softmax/: __init__.py  baseline.py  fused_softmax.py
triton_ops/utils/: triton_helpers.py
